fixes body padding to remove gap between navbar and carousel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 
 BODY {
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	padding-top: 60px;
+	padding-top: 51px;
 }
 
 IMG {
